syntax = "proto3";

package controller.storage.servers.store.v1;

import "controller/storage/timestamp/v1/timestamp.proto";

option go_package = "github.com/hashicorp/boundary/internal/servers/store;store";

// Worker contains all fields related to a Worker resource
message Worker {
  // Public ID of the resource
  // @inject_tag: `gorm:"primary_key"`
  string public_id = 10;

  // Name of the resource (optional)
  // Description of the resource (optional)
  // @inject_tag: `gorm:"default:null"`
  string name = 20;

  // Description of the resource (optional)
  // @inject_tag: `gorm:"default:null"`
  string description = 30;

  // Address for the worker
  string address = 40;

  // First seen time from the RDBMS
  storage.timestamp.v1.Timestamp create_time = 50;

  // Last time there was an update
  storage.timestamp.v1.Timestamp update_time = 60;

  // @gotags: `gorm:"-"`
  map<string, TagValues> tags = 70;
}

// TagValues is used because map fields cannot be repeated but can be a
// message
message TagValues {
  repeated string values = 10;
}
